# gppp

gppp/: ChangeLog  Makefile.am  aclocal.m4  config.status  configure.in  gppp.desktop  libtool  mkinstalldirs
gppp/intl/: Makefile
gppp/pixmaps/: Makefile.am
gppp/po/: POTFILES  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  gppp.pot
gppp/src/: Makefile.am  accounts.c  accounts.h  gppp  gppp.c  gppp_main.c  gppp_main.h  setup.c  setup.h  storeconfig.c  storeconfig.h  stuff.c  stuff.h
gppp/src/.deps/: accounts.P  gppp.P  gppp_main.P  setup.P  storeconfig.P  stuff.P
